manifests/argocd/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-ingress
  namespace: argocd
  annotations:
    kubernetes.io/ingress.global-static-ip-name: argo-static-ip-prod
    networking.gke.io/managed-certificates: argo-cert
    kubernetes.io/ingress.class: "gce"
spec:
  defaultBackend:
    service:
      name: argocd-server
      port:
        number: 80
